# wikipedia-osm-opendatasync-rs

./: .gitignore  Cargo.toml  Containerfile  DOCS.md  LICENSE.md  README.md  TODO.md  example_batch.toml  flake.nix  opendatasync
src/: batch.rs  cache.rs  client.rs  erdfa.rs  error.rs  lib.rs  main.rs  overpass.rs  request.rs  tracing_middleware.rs  traversal.rs  types.rs  wikicommons.rs  wikidata.rs  zkperf.rs
src/cache/: global_id.rs  middleware.rs
src/overpass/: api.rs  id.rs  models.rs  processing.rs  query.rs  request.rs
src/overpass/models/: response.rs
src/wikicommons/: api.rs  models.rs  processing.rs
src/wikicommons/models/: category.rs  imageinfo.rs
src/wikidata/: api.rs  csv_export.rs  id.rs  models.rs  processing.rs
src/wikidata/models/: conversion.rs  entity.rs  property.rs  response.rs  serialization.rs  value.rs
